syntax = "proto3";

package task;

service TaskService {
  rpc CreateProject (CreateProjectRequest) returns (Project);
  rpc ListProjects (ListProjectsRequest) returns (ListProjectsResponse);
  rpc ListPublicProjects (ListPublicProjectsRequest) returns (ListProjectsResponse); // New
  rpc UpdateProject (UpdateProjectRequest) returns (Project); // New

  rpc CreateTask (CreateTaskRequest) returns (Task);
  rpc ListTasks (ListTasksRequest) returns (ListTasksResponse);
  rpc UpdateTask (UpdateTaskRequest) returns (UpdateTaskResponse);
}

message Project {
  string id = 1;
  string owner_id = 2;
  string name = 3;
  string description = 4;
  string status = 5;
  double funding_goal = 6;
  double equity_offered = 7;
  bool is_public = 8;
  string industry = 9;
}

message Task {
  string id = 1;
  string project_id = 2;
  string title = 3;
  string description = 4;
  string status = 5;
  string priority = 6;
  string assignee_id = 7;
  int32 position = 8;
}

message CreateProjectRequest {
  string name = 1;
  string description = 2;
  string owner_id = 3;
}

message ListProjectsRequest {
  string owner_id = 1;
}

message ListProjectsResponse {
  repeated Project projects = 1;
}

// New
message ListPublicProjectsRequest {
  string industry_filter = 1; // Optional
}

// New
message UpdateProjectRequest {
  string id = 1;
  string description = 2;
  double funding_goal = 3;
  double equity_offered = 4;
  bool is_public = 5;
  string industry = 6;
}

message CreateTaskRequest {
  string project_id = 1;
  string title = 2;
  string description = 3;
  string priority = 4;
  string assignee_id = 5;
}

message ListTasksRequest {
  string project_id = 1;
}

message ListTasksResponse {
  repeated Task tasks = 1;
}

message UpdateTaskRequest {
  string id = 1;
  string status = 2;
  string priority = 3;
  int32 position = 4;
}

message UpdateTaskResponse {
  Task task = 1;
}
